# apps/system/account/model.go
@@ -11,6 +11,8 @@ type Account struct {
 	Username string `json:"username" gorm:"type:varchar(24);not null;uniqueIndex:idx_deleted_at;comment:用户名"`
 	// 密码
 	Password string `json:"-" gorm:"type:varchar(64);not null;comment:密码"`
+	// 昵称
+	Nickname string `json:"nickname" gorm:"type:varchar(24);comment:昵称"`
 	// 邮箱
 	Email string `json:"email" gorm:"type:varchar(48);index;comment:邮箱"`
 	// 手机号
