# docs/swagger.json
@@ -96,6 +96,13 @@
                         "schema": {
                             "$ref": "#/definitions/account.CreateRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -507,6 +514,142 @@
                         "schema": {
                             "type": "string"
                         }
+                    }
+                }
+            }
+        },
+        "/menu": {
+            "get": {
+                "description": "树形菜单",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "menu"
+                ],
+                "summary": "树形菜单",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "put": {
+                "description": "修改菜单",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "menu"
+                ],
+                "summary": "修改菜单",
+                "parameters": [
+                    {
+                        "description": "修改菜单请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menu.Request"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "post": {
+                "description": "创建菜单",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "menu"
+                ],
+                "summary": "创建菜单",
+                "parameters": [
+                    {
+                        "description": "创建菜单请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menu.Request"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/menu/{id}": {
+            "delete": {
+                "description": "删除菜单",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "menu"
+                ],
+                "summary": "删除菜单",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
@@ -1257,6 +1400,10 @@
                     "description": "手机号",
                     "type": "string"
                 },
+                "nickname": {
+                    "description": "昵称",
+                    "type": "string"
+                },
                 "role": {
                     "description": "角色",
                     "allOf": [
@@ -1782,6 +1929,69 @@
                 "refresh_token": {
                     "description": "刷新令牌",
                     "type": "string"
+                }
+            }
+        },
+        "menu.Request": {
+            "type": "object",
+            "required": [
+                "component",
+                "icon",
+                "name",
+                "parent_id",
+                "router",
+                "status",
+                "title",
+                "type"
+            ],
+            "properties": {
+                "component": {
+                    "description": "路由路径",
+                    "type": "string"
+                },
+                "hide_menu": {
+                    "description": "隐藏菜单",
+                    "type": "boolean"
+                },
+                "i18n": {
+                    "description": "国际化",
+                    "type": "string"
+                },
+                "icon": {
+                    "description": "菜单图标",
+                    "type": "string"
+                },
+                "keeper_alive": {
+                    "description": "缓存菜单",
+                    "type": "boolean"
+                },
+                "name": {
+                    "description": "菜单名称",
+                    "type": "string"
+                },
+                "order": {
+                    "description": "菜单排序",
+                    "type": "integer"
+                },
+                "parent_id": {
+                    "description": "父级菜单id",
+                    "type": "integer"
+                },
+                "router": {
+                    "description": "路由名称",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "菜单状态",
+                    "type": "integer"
+                },
+                "title": {
+                    "description": "菜单标题",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "菜单类型",
+                    "type": "integer"
                 }
             }
         },
